Ready for training

--- a/training/training.config
+++ b/training/training.config
@@ -108,7 +108,7 @@ train_config: {
     use_moving_average: false
   }
   gradient_clipping_by_norm: 10.0
-  fine_tune_checkpoint: "checkpoint/model.ckpt"
+  fine_tune_checkpoint: "/home/tensorflow/models/training/checkpoint/model.ckpt"
   from_detection_checkpoint: true
   # Note: The below line limits the training process to 200K steps, which we
   # empirically found to be sufficient enough to train the COCO dataset. This
@@ -123,9 +123,9 @@ train_config: {
 
 train_input_reader: {
   tf_record_input_reader {
-    input_path: "train.tfrecord"
+    input_path: "/home/tensorflow/models/training/train.tfrecord"
   }
-  label_map_path: "labels.txt"
+  label_map_path: "/home/tensorflow/models/training/labels.txt"
 }
 
 eval_config: {
@@ -137,9 +137,9 @@ eval_config: {
 
 eval_input_reader: {
   tf_record_input_reader {
-    input_path: "test.tfrecord"
+    input_path: "/home/tensorflow/models/training/test.tfrecord"
   }
-  label_map_path: "labels.txt"
+  label_map_path: "/home/tensorflow/models/training/labels.txt"
   shuffle: false
   num_readers: 1
 }
